--- a/example/html/Makefile
+++ b/example/html/Makefile
@@ -3,3 +3,7 @@ index.html: index_template.html publications.html tools.html talks.html
 
 %.html: ../../xslt/%_html.xsl ../data.xml
 	xsltproc $^ > $@
+
+clean:
+	$(RM) publications.html tools.html talks.html index.html
+.PHONY: clean
