--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -20,8 +20,9 @@ jobs:
         run: make -C ./example/html clean index.html
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         env:
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./public
-          DESTINATION_DIR: ./html
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./public
+          destination_dir: ./html
